# probity

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  EVAL_SPEC.md  INTERFACE_CONTRACT.md  LICENSE  Makefile  PROJECT_STATE.md  README.md  README.zh-TW.md  REFERENCES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: cli_sut_runner.py  llm_patch_agent.py
demo/patchbot/: task_demo_patchbot_01.json
docs/: DISCOVERABILITY.md  DOCKER.md  EVIDENCE_BUNDLE.md  I18N.md  JUDGING_A_RUN.md  LAUNCH_COPY.md  METHODOLOGY.md  PROJECT_SURFACES.md  PUBLICATION_PREP.md  PUBLIC_CLAIMS.md  QUICKSTART.md  RELATED_WORK.md  ROADMAP.md  USE_CASES.md
gauntlet/: __init__.py  __main__.py  checker.py  cli.py  cluster.py  report.py  runner.py  stats.py  types.py  verdict.py
gauntlet/adapters/: base.py  scripted.py  subprocess.py
probity/: __init__.py  __main__.py  checker.py  cli.py  cluster.py  report.py  runner.py  types.py  verdict.py
scripts/: aggregate_ruler_value.py  audit_public_claims.py  audit_public_release.py  check_commit_message.py  falsepremise_contrast.py  make_charts.py  make_focus_loss_chart.py  probity_docker_entry.py  reverify_falsepremise.py  run_codex_session.py  run_live_session.py  run_semver_experiment.py
tests/: conftest.py  test_calibration.py  test_checker.py  test_checker_limits.py  test_demo.py  test_docker_adapter.py  test_early_stop.py  test_env_preconditions.py  test_init.py  test_live_agent.py  test_report.py  test_runner.py  test_semver_selftest.py  test_stats.py  test_types.py  test_verdict.py  test_verdict_flips.py
(+47 files in other folders)
